# encripta-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: encripta-gui.rs  lib.rs  test.rs
